2006-05-05  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/others-menu.c: Dnotify signal handlers now only
	  creates a timeout of 1s, after which the menu is updated
	  (Closes N#28658)

2006-05-03  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/*.c: Removed deprecated low memory notifications

2006-05-03  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-main.c: Fixed launching of calibration and
	  personalisation CPA I broke this week end
	* configure.ac: 2.6.14

2006-05-03  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "HOME: Buttons in layout mode are not shown completely"
	(Closes N#27706)
	* layout-manager.c:
	  - modified icon placements to conform with specifications 6.1
	  - swapped ok and cancel buttons to conform to specifications 6.1
	Applied fix to "HOME: Loading image -cancel note has animation
	instead of progress bar" (Closes N#27722)
	* hildon-home-main.c:
	  - added indefinite progress bar (Home UI spec 6.1)
	  - removed icon code
	  - added progress bar update function

2006-05-03  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.6.13

2006-05-03  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/applet_manager.c:
      - a list was being changed while being iterated
	  - reverted partially fix to N#27832 which caused a crash

2006-04-29  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-main.c:
	  - replaced call to libmb with calls to g_key_file_
	  - factorized code to call cp applets
	* hildon-home/home-applet-handler.c:
	  - replaced call to libmb with calls to g_key_file_
	* hildon-home/applet-manager.c:
	  - replaced call to libmb with calls to g_key_file_
	  - removed applet_manager_initialize_all which, surprise surprise,
	    was never used ...
	* configure.ac, Makefile.am, */Makefile.am: don't link to libmb
	  anymore

2006-04-29  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.6.12

2006-04-28  Johan Bilien <johan.bilien@nokia.com>
